--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IL-photography",
+  "name": "il-photography",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.2",
+    "body-parser": "^2.2.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -22,8 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -43,5 +46,18 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "main": "vue.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zhilan-leo/Zhilan-leo.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Zhilan-leo/Zhilan-leo.github.io/issues"
+  },
+  "homepage": "https://github.com/Zhilan-leo/Zhilan-leo.github.io#readme",
+  "description": ""
 }
